--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <a target="_bLank" href="https://baay22.github.io/Buy-Zopiclone-1/">https://baay22.github.io/Buy-Zopiclone-1/</a><br>
                 <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Buy+Zopiclone/Buy+Zopiclone-1/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/Buy+Zopiclone/Buy+Zopiclone-1/index.html</a><br>
                 <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Buy+Zopiclone/Buy+Zopiclone-1/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/Buy+Zopiclone/Buy+Zopiclone-1/index.html</a><br>
-                <a target="_bLank" href="https://quiet-mooncake-f20b88.netlify.app/">https://quiet-mooncake-f20b88.netlify.app/</a><br>
+                <a target="_bLank" href="https://sweet-custard-dee82e.netlify.app/">https://sweet-custard-dee82e.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
